Parando de recarregar a pagina quanto usando 'ENTER'

--- a/desafio/index.html
+++ b/desafio/index.html
@@ -24,6 +24,7 @@
 
       <!--- TABLE --->
       <div class="table">
+        <!--- JAVASCRIPT AQUI --->
         <table>
           <tr class="trow">
             <th class="theader">Nome</th>
