Finalizando front e comecando a exibir array na tabela

--- a/desafio/index.html
+++ b/desafio/index.html
@@ -26,7 +26,7 @@
         <!--- JAVASCRIPT AQUI --->
         <table>
           <tr>
-            <th class="theader">Nome</th>
+            <th class="theader">Contatos</th>
           </tr>
         </table>
 
