Criando botoes de exclusao por linha

--- a/desafio/index.html
+++ b/desafio/index.html
@@ -27,6 +27,7 @@
         <table>
           <tr>
             <th class="theader">Contatos</th>
+            <th class="theader">Ações</th>
           </tr>
         </table>
 
