--- a/desafio/index.html
+++ b/desafio/index.html
@@ -6,6 +6,7 @@
     <title>Agenda</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
   <body>
