Finalizando trabalho prático

--- a/RGB/index.html
+++ b/RGB/index.html
@@ -32,8 +32,7 @@
       <input class="range" type="range" value="0" min="0" max="250"/> 
       <input class="number" id="numberBlue" type="text" value="0" name="blueValue" disabled/>
      </div>
-     <div class="body" style="background: rgb(0, 0, 0);">
-
+     <div id="body"  class="square" style="background: rgb(0, 0, 0);">
     </div>
 
       </div>
