Dando um up no visual do trabalho

--- a/RGB/index.html
+++ b/RGB/index.html
@@ -17,22 +17,22 @@
        <!--- R --->
       <div class="r">
         <label>R</label>
-        <input class="range" type="range" value="0" min="0" max="250" />
+        <input class="range" type="range" value="0" min="0" max="255" step="0.1"/>
         <input class="number" id="numberRed" type="text" value="0" name="redValue" disabled/>
       </div>
     <!--- G --->
     <div class="g">
       <label>G</label>
-      <input class="range" type="range" value="0" min="0" max="250"/>
+      <input class="range" type="range" value="0" min="0" max="255" step="0.1"/>
       <input class="number" id="numberGreen" type="text" value="0" name="greenValue" disabled/>
     </div>
       <!--- B --->
      <div class="b">
       <label>B</label>
-      <input class="range" type="range" value="0" min="0" max="250"/> 
+      <input class="range" type="range" value="0" min="0" max="255" step="0.1"/> 
       <input class="number" id="numberBlue" type="text" value="0" name="blueValue" disabled/>
      </div>
-     <div id="body"  class="square" style="background: rgb(0, 0, 0);">
+     <div id="body"  class="square">
     </div>
 
       </div>
