--- a/ES6/index.html
+++ b/ES6/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <script src="./scripts.js"></script>
+
+    <script src="./js/people.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
