Fetch, promisse e API

--- a/ES6/index.html
+++ b/ES6/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 
+    <div class="principal">
+        HELLO
+    </div>
+
     <script src="./js/people.js"></script>
     <script src="./js/scripts.js"></script>
+    <script src="./js/timers.js"></script>
 </body>
 </html>
