criando estado da aplicação e Mapeando a DOM

--- a/DG-02/index.html
+++ b/DG-02/index.html
@@ -16,14 +16,16 @@
 		<div class="container">
 			<div class="country-container">
               
-				<h5>Países(<spam id="country-Favorites"></spam>)</h5>
-				<h6>População total: <span id="totalPopulationFavorites"></span></h6>
+				<h5>Países(<spam id="countCountries"></spam>)</h5>
+				<h6>População total: <span id="totalPopulationList"></span></h6>
+                <div class="tabCountries"></div>
             </div>
           
 			<div class="country-container">
-				<h5>Países(<spam id="country-Favorites"></spam>)</h5>
+				<h5>Países(<spam id="countFavorites"></spam>)</h5>
 				<h6>População total: <span id="totalPopulationFavorites"></span></h6>
-			</div>
+                <div class="tabFavorites"></div>
+            </div>
 		</div>
 
 		<script src="./js/script.js"></script>
