Exibindo countries já estilizadas

--- a/DG-02/index.html
+++ b/DG-02/index.html
@@ -6,8 +6,9 @@
 		<link
 			href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
 			rel="stylesheet"
-		/>
-		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+        />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		
 		<title>Desafio Guiado 02</title>
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
@@ -28,6 +29,7 @@
             </div>
 		</div>
 
-		<script src="./js/script.js"></script>
+        <script src="./js/script.js"></script>
+        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 	</body>
 </html>
