Criando front do desafio moldulo 01

--- a/Fundamentos/DG-02/index.html
+++ b/Fundamentos/DG-02/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
-        <h1>Desafio 02</h1>
+        <h1>Countries</h1>
 		<div class="container">
 			<div class="country-container">
               
