Transformando os dados em array

--- a/Desafio/index.html
+++ b/Desafio/index.html
@@ -14,17 +14,22 @@
 				<form>
 					<div class="input">
 						<label>Busca:</label>
-						<input type="text" />
+						<input type="text" size="30" />
 						<button type="submit" class="btn-search">BUSCAR</button>
 					</div>
 				</form>
 			</div>
 			<div class="body">
-				<div class="child">1</div>
-				<div class="child">2</div>
+				<div class="child">
+					<h2>X usuário(s) encontrados(s)</h2>
+				</div>
+				<div class="child">
+					<h2>Estatística</h2>
+				</div>
 			</div>
 		</div>
 
+		<script src="./js/user.js"></script>
 		<script src="./js/script.js"></script>
 	</body>
 </html>
