Exibindo pessoas na lista

--- a/Desafio/index.html
+++ b/Desafio/index.html
@@ -22,9 +22,11 @@
 			<div class="body">
 				<div class="child">
 					<h2>X usuário(s) encontrados(s)</h2>
+					<div class="users"></div>
 				</div>
 				<div class="child">
 					<h2>Estatística</h2>
+					<div class="statistics"></div>
 				</div>
 			</div>
 		</div>
