Capturando dados do input, realizando busca dinamica e prevenindo submit quando 'enter'

--- a/Desafio/index.html
+++ b/Desafio/index.html
@@ -14,7 +14,7 @@
 				<form>
 					<div class="input">
 						<label>Busca:</label>
-						<input type="text" size="30" />
+						<input type="text" size="30" id="input"/>
 						<button type="submit" class="btn-search">BUSCAR</button>
 					</div>
 				</form>
