Finalizando desafio modulo 1

--- a/Desafio/index.html
+++ b/Desafio/index.html
@@ -15,18 +15,22 @@
 					<div class="input">
 						<label>Busca:</label>
 						<input type="text" size="30" id="input"/>
-						<button type="submit" class="btn-search">BUSCAR</button>
+						<button type="submit" class="btn-search" onclick="doSearch()">BUSCAR</button>
 					</div>
 				</form>
 			</div>
 			<div class="body">
 				<div class="child">
-					<h2>X usuário(s) encontrados(s)</h2>
-					<div class="users"></div>
+					<div class="users">
+						Nenhum usuário filtrado.
+					</div>
 				</div>
 				<div class="child">
-					<h2>Estatística</h2>
-					<div class="statistics"></div>
+					<h2>Estatísticas</h2>
+					<br>
+					<div class="statistics">
+						Nada a ser exibido.
+					</div>
 				</div>
 			</div>
 		</div>
