--- a/03.ReactJS/01.Trabalho-pratico/public/index.html
+++ b/03.ReactJS/01.Trabalho-pratico/public/index.html
@@ -31,7 +31,7 @@
       width: 100%;
     }
     </style>
-    <title>React App</title>
+    <title>React Salário</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
