Adicionando Backend para trabalhar por cima

--- a/03.ReactJS/0.Aulas/03.Votes/frontend/public/index.html
+++ b/03.ReactJS/0.Aulas/03.Votes/frontend/public/index.html
@@ -9,6 +9,19 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Inclusão do Materialize CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,14 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
-    <style type="text/css">
-    html, body {
-      margin: 0;
-      width: 100%;
-    }
-    </style>
-    <title>React Salário</title>
+    <title>Votação</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
